...
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoppingInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="Add item..."
                android:inputType="textCapSentences"
                android:imeOptions="actionDone"
                android:singleLine="true"
...
